@@ -1,3 +1,9 @@
+2024-06-23T12:23:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9633394430 # 668
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-06-23
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 3162 / 0 3164 / +0 +2
+
 2024-06-23T01:03:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9629591985 # 667
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-06-23
